[tool.poetry]
name = "linklibrary"
version = "0.10.4"
description = "Link Archive"
authors = ["Iwan Grozny <renegat@renegat0x0.ddns.net>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.17"
django-user-agents = "^0.4.0"
django-celery-results = "^2.5.1"
pymemcache = "^4.0.0"
celery = "^5.4.0"
python-dateutil = "^2.8.2"
yt-dlp = "^2024.12.23"
waybackpy = "^3.0.6"
sqlalchemy = "^2.0.37"
tldextract = "^5.1.2"
sympy = "^1.13.2"
spacy = "3.7.5"

# Do we need this?
pytz = "^2024.2"
# Do we need this?
beautifulsoup4 = "^4.12.3"

requests = "^2.32.3"
psycopg2 = "*"
psutil="*"

# TODO do we need this?
chardet = "^5.2.0"
# TODO do we need this?
lxml="^5.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
