[tool.poetry]
name = "linklibrary"
version = "2.25.2"
description = "Link Archive"
authors = ["Iwan Grozny <renegat@renegat0x0.ddns.net>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.2.0"
django-user-agents = "^0.4.0"
pymemcache = "^4.0.0"
python-dateutil = "^2.8.2"
yt-dlp = "^2025.10.14"
waybackpy = "^3.0.6"
sqlalchemy = "^2.0.38"
tldextract = "^5.1.2"
sympy = "^1.14.0"
spacy = "3.7.5"
url-cleaner="0.1.5"

# Do we need this?
pytz = "^2024.2"
# Do we need this?
beautifulsoup4 = "^4.13.3"

requests = "^2.32.3"
#psycopg2 = "*" # for raspberry install python3-psycopyg2
psycopg2-binary = "*" # for raspberry install python3-psycopyg2
psutil="*"

# TODO do we need this?
#chardet = "^5.2.0"
# TODO do we need this?
#lxml="^5.4.0"
#brutefeedparser="*"
webtoolkit="0.0.133"
cryptography="^45.0.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
py-spy = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
